force-app/main/default/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>