force-app/main/default/objects/JobApplication__c/fields/AverageRating__c.field-meta.xml
<CustomField>
    <fullName>AverageRating__c</fullName>
    <formula>TotalRating__c  /  NumberOfReviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>