force-app/main/default/objects/JobApplication__c/fields/CoverLetter__c.field-meta.xml
<CustomField>
    <fullName>CoverLetter__c</fullName>
    <label>Cover Letter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>