force-app/main/default/objects/JobApplication__c/fields/NumberOfReviews__c.field-meta.xml
<CustomField>
    <fullName>NumberOfReviews__c</fullName>
    <label>Number of Reviews</label>
    <summaryForeignKey>Review__c.JobApplication__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>