force-app/main/default/objects/JobApplication__c/fields/TotalRating__c.field-meta.xml
<CustomField>
    <fullName>TotalRating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.JobApplication__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>