force-app/main/default/objects/JobApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Candidate__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>TotalRating__c</columns>
    <columns>NumberOfReviews__c</columns>
    <columns>AverageRating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>